--- a/templates/dashboard/products.html
+++ b/templates/dashboard/products.html
@@ -14,7 +14,7 @@
         {% endfor %}
         {% endif %}
         <div class="card card-body">
-            <h5>Add New Products</h5>
+            <h5>Tasa Defunciones en Cartagena</h5>
             <hr>
             <form method="POST">
                 {% csrf_token %}
@@ -28,8 +28,8 @@
             <thead class="bg-info text-white">
                 <tr>
                     <th scope="col">Name</th>
-                    <th scope="col">Category</th>
-                    <th scope="col">Quantity</th>
+                    <th scope="col">Categoría</th>
+                    <th scope="col">Cantidad de muertos</th>
                     <th scope="col">Activity</th>
                 </tr>
             </thead>
