feat: add death domain data

--- a/templates/dashboard/customer_index.html
+++ b/templates/dashboard/customer_index.html
@@ -34,7 +34,7 @@
                             {% if order.customer == user %}
                             <tr>
                                 <td>{{ order.name }}</td>
-                                <td>{{ order.name.category }}</td>
+                                <td>{{ order.name.categoria }}</td>
                                 <td>{{ order.order_quantity }}</td>
                             </tr>
                             {% endif %}
