--- a/templates/dashboard/products_detail.html
+++ b/templates/dashboard/products_detail.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="row my-4">
     <div class="col-md-6 offset-md-3 p-3 bg-white">
-        <h3>Order {{ objects.name }}</h3>
+        <h3>Deaths {{ objects.year }}</h3>
         <hr>
         <form>
             {% csrf_token %}
