--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -1,23 +1,24 @@
 {% extends 'partials/base.html' %}
-{% block title %}Home Page{% endblock %}
+{% block title %}Inicio{% endblock %}
 
 {% block content %}
 {% if user.is_authenticated and user.is_staff and user.is_superuser %}
 {% include 'partials/topside.html' %}
-<div class="row ">
+<h3 class="text-center">Demografía - Muertes</h3>
+<div class="row mt-3">
     <div class="col-md-6 my-4">
         <div class="bg-white">
             <div class="card-body">
                 <canvas id="myChart1" width="400" height="300"></canvas>
                 <script>
-                    var ctx = document.getElementById('myChart1').getContext('2d');
-                    var myChart1 = new Chart(ctx, {
+                    var ctx1 = document.getElementById('myChart1').getContext('2d');
+                    var myChart1 = new Chart(ctx1, {
                         type: 'pie',
                         data: {
-                            labels: [{% for product in product %} '{{product.year}}', {% endfor %}],
+                            labels: [{% for death in death %} '{{death.year}}', {% endfor %}],
                     datasets: [{
-                        label: 'Number of Products',
-                        data: [{% for product in product %} {{ product.cantidad }}, {% endfor %}],
+                        label: 'Muertes por año',
+                        data: [{% for death in death %} {{ death.cantidad }}, {% endfor %}],
                         backgroundColor: [
                             'rgba(255, 99, 132, 1)',
                             'rgba(54, 162, 235, 1)',
@@ -56,14 +57,14 @@
             <div class="card-body">
                 <canvas id="myChart" width="400" height="300"></canvas>
                 <script>
-                    var ctx = document.getElementById('myChart').getContext('2d');
-                    var myChart = new Chart(ctx, {
+                    var ctx2 = document.getElementById('myChart').getContext('2d');
+                    var myChart = new Chart(ctx2, {
                         type: 'bar',
                         data: {
-                            labels: [{% for product in product %} '{{product.year}}',{% endfor %}],
+                            labels: [{% for death in death %} '{{death.year}}',{% endfor %}],
                     datasets: [{
-                        label: 'Products',
-                        data: [{% for product in product %} {{ product.cantidad }}, {% endfor %}],
+                        label: 'Muertes por año',
+                        data: [{% for death in death %} {{ death.cantidad }}, {% endfor %}],
                         backgroundColor: [
                             'rgba(255, 99, 132, 1)',
                             'rgba(54, 162, 235, 1)',
@@ -98,6 +99,203 @@
         </div>
     </div>
 </div>
+
+<h3 class="text-center">Demografía - Nacimientos</h3>
+<div class="row mt-3">
+    <div class="col-md-6 my-4">
+        <div class="bg-white">
+            <div class="card-body">
+                <canvas id="mychart3" width="400" height="300"></canvas>
+                <script>
+                    var ctx3 = document.getElementById('mychart3').getContext('2d');
+                    var mychart3 = new Chart(ctx3, {
+                        type: 'pie',
+                        data: {
+                            labels: [{% for birth in birth %} '{{birth.year}}', {% endfor %}],
+                    datasets: [{
+                        label: 'Muertes por año',
+                        data: [{% for birth in birth %} {{ birth.cantidad }}, {% endfor %}],
+                        backgroundColor: [
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 206, 86, 1)',
+                            'rgba(75, 192, 192, 1)',
+                            'rgba(153, 102, 255, 1)',
+                            'rgba(255, 159, 64, 1)'
+                        ],
+                            borderColor: [
+                                'rgba(255, 99, 132, 1)',
+                                'rgba(54, 162, 235, 1)',
+                                'rgba(255, 206, 86, 1)',
+                                'rgba(75, 192, 192, 1)',
+                                'rgba(153, 102, 255, 1)',
+                                'rgba(255, 159, 64, 1)'
+                            ],
+                                borderWidth: 1
+                    }]
+                        },
+                    options: {
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero: true
+                                }
+                            }]
+                        }
+                    }
+                    });
+                </script>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6 my-4">
+        <div class="bg-white">
+            <div class="card-body">
+                <canvas id="myChart4" width="400" height="300"></canvas>
+                <script>
+                    var ctx4 = document.getElementById('myChart4').getContext('2d');
+                    var myChart4 = new Chart(ctx4, {
+                        type: 'bar',
+                        data: {
+                            labels: [{% for birth in birth %} '{{birth.year}}',{% endfor %}],
+                    datasets: [{
+                        label: 'Nacimientos por año',
+                        data: [{% for birth in birth %} {{ birth.cantidad }}, {% endfor %}],
+                        backgroundColor: [
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 206, 86, 1)',
+                            'rgba(75, 192, 192, 1)',
+                            'rgba(153, 102, 255, 1)',
+                            'rgba(255, 159, 64, 1)'
+                        ],
+                            borderColor: [
+                                'rgba(255, 99, 132, 1)',
+                                'rgba(54, 162, 235, 1)',
+                                'rgba(255, 206, 86, 1)',
+                                'rgba(75, 192, 192, 1)',
+                                'rgba(153, 102, 255, 1)',
+                                'rgba(255, 159, 64, 1)'
+                            ],
+                                borderWidth: 1
+                    }]
+                        },
+                    options: {
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero: true
+                                }
+                            }]
+                        }
+                    }
+                    });
+                </script>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<h3 class="text-center">Educación - Matrículas</h3>
+<div class="row mt-3">
+    <div class="col-md-6 my-4">
+        <div class="bg-white">
+            <div class="card-body">
+                <canvas id="mychart5" width="400" height="300"></canvas>
+                <script>
+                    var ctx5 = document.getElementById('mychart5').getContext('2d');
+                    var mychart5 = new Chart(ctx5, {
+                        type: 'pie',
+                        data: {
+                            labels: [{% for education in education %} '{{education.year}}', {% endfor %}],
+                    datasets: [{
+                        label: 'Muertes por año',
+                        data: [{% for education in education %} {{ education.cantidad }}, {% endfor %}],
+                        backgroundColor: [
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 206, 86, 1)',
+                            'rgba(75, 192, 192, 1)',
+                            'rgba(153, 102, 255, 1)',
+                            'rgba(255, 159, 64, 1)'
+                        ],
+                            borderColor: [
+                                'rgba(255, 99, 132, 1)',
+                                'rgba(54, 162, 235, 1)',
+                                'rgba(255, 206, 86, 1)',
+                                'rgba(75, 192, 192, 1)',
+                                'rgba(153, 102, 255, 1)',
+                                'rgba(255, 159, 64, 1)'
+                            ],
+                                borderWidth: 1
+                    }]
+                        },
+                    options: {
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero: true
+                                }
+                            }]
+                        }
+                    }
+                    });
+                </script>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6 my-4">
+        <div class="bg-white">
+            <div class="card-body">
+                <canvas id="myChart6" width="400" height="300"></canvas>
+                <script>
+                    var ctx6 = document.getElementById('myChart6').getContext('2d');
+                    var myChart6 = new Chart(ctx6, {
+                        type: 'bar',
+                        data: {
+                            labels: [{% for education in education %} '{{education.year}}',{% endfor %}],
+                    datasets: [{
+                        label: 'Matriculas por año',
+                        data: [{% for education in education %} {{ education.cantidad }}, {% endfor %}],
+                        backgroundColor: [
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 206, 86, 1)',
+                            'rgba(75, 192, 192, 1)',
+                            'rgba(153, 102, 255, 1)',
+                            'rgba(255, 159, 64, 1)'
+                        ],
+                            borderColor: [
+                                'rgba(255, 99, 132, 1)',
+                                'rgba(54, 162, 235, 1)',
+                                'rgba(255, 206, 86, 1)',
+                                'rgba(75, 192, 192, 1)',
+                                'rgba(153, 102, 255, 1)',
+                                'rgba(255, 159, 64, 1)'
+                            ],
+                                borderWidth: 1
+                    }]
+                        },
+                    options: {
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero: true
+                                }
+                            }]
+                        }
+                    }
+                    });
+                </script>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 {% else %}
 {% include 'dashboard/customer_index.html' %}
 {% endif%}
