--- a/templates/dashboard/education_edit.html
+++ b/templates/dashboard/education_edit.html
@@ -1,11 +1,11 @@
 {% extends 'partials/base.html' %}
-{% block title %}Products Edit Page{% endblock %}
+{% block title %}Educations Edit Page{% endblock %}
 {% load crispy_forms_tags %}
 
 {% block content %}
 <div class="row my-4">
     <div class="col-md-6 offset-md-3 p-3 bg-white">
-        <h3>Edit Item</h3>
+        <h3>Editar item</h3>
         <hr>
         <form>
             {% csrf_token %}
