--- a/templates/partials/topside.html
+++ b/templates/partials/topside.html
@@ -1,29 +1,37 @@
-<div class="row">
-    <div class="col-md-4 mt-4">
+<div class="row mt-3">
+    <div class="col-md-12 mt-20">
         <div class="card">
             <div class="card-header bg-info text-white">
-                Información
-            </div>
-            <div class="card-body">
-                <marquee behavior="" direction="">
-                    <h3 class="my-4">Datos en cartagena</h3>
-                </marquee>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-8 mt-4">
-        <div class="card">
-            <div class="card-header bg-info text-white">
-                Tablero de estadísticas
+                Categorías
             </div>
             <div class="card-body">
                 <div class="row">
                     <div class="col-md-4">
-                        <a class="text-decoration-none text-dark" href="{% url 'dashboard-products' %}">
+                        <a class="text-decoration-none text-dark" href="{% url 'dashboard-deaths' %}">
                             <div class="card my-card shadow">
                                 <div class="card-body text-center">
-                                    <h5>Tasa de defunciones <i class="fas fa-skull-crossbones"></i></h5>
-                                    <h5 style="color: red">{{ product_count }}</h5>
+                                    <h6>Tasa de defunciones <i class="fas fa-skull-crossbones"></i></h6>
+                                    <h6 style="color: red">{{ death_count }}</h6>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a class="text-decoration-none text-dark" href="{% url 'dashboard-births' %}">
+                            <div class="card my-card shadow">
+                                <div class="card-body text-center">
+                                    <h6>Tasa de nacimientos <i class="fas fa-baby"></i></h6>
+                                    <h6 style="color: red">{{ birth_count }}</h6>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a class="text-decoration-none text-dark" href="{% url 'dashboard-educations' %}">
+                            <div class="card my-card shadow">
+                                <div class="card-body text-center">
+                                    <h6>Tasa de matriculas <i class="fas fa-user-graduate"></i></h6>
+                                    <h6 style="color: red">{{ death_count }}</h6>
                                 </div>
                             </div>
                         </a>
